--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "normalize-rails";
 @import "materialize";
 
+@import "shared/icons";
 @import "shared/variables";
 @import "shared/typography";
 @import "base/base";
