--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,4 +6,6 @@
 @import "shared/icons";
 @import "shared/variables";
 @import "shared/typography";
+@import "shared/logo";
+@import "shared/nav";
 @import "base/base";
